crates/toml_edit/tests/fixtures/invalid/string/multiline-bad-escape-3.stderr
TOML parse error at line 2, column 11
  |
2 | k = """t\ """
  |           ^
Invalid escape sequence
Expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
